syntax = "proto3";

package helloworld;

service OrderService {
	rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
	rpc PriceChanges (NoParams) returns (stream Item){}
}

message CreateOrderRequest{
	int32 UserId = 1;
	repeated Item items = 2;
}

message CreateOrderResponse {
	int32 Id = 1;
	int32 ItemCount = 2;
}

message Item {
	int32 Id = 1;
	double Price = 2;
}

message NoParams {
	
}